# prism

./: .gitignore  .oxfmtrc.json  .oxlintrc.json  CHANGELOG.md  CONTRIBUTING.md  README.md  index.html  package-lock.json  package.json  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  release.yml
scripts/: setup.sh
src/: App.test.tsx  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs  notifications.rs  tray.rs  types.rs
src-tauri/src/cache/: activity.rs  config.rs  dashboard.rs  db.rs  issues.rs  mod.rs  notifications.rs  pull_requests.rs  repos.rs  reviews.rs  stats.rs  sync.rs  workspace_enrichment.rs  workspaces.rs
src-tauri/src/cache/migrations/: 001_initial.sql  002_add_pr_diff_stats.sql  003_add_pr_head_ref_name.sql
src-tauri/src/github/: auth.rs  client.rs  mod.rs  models.rs  notifications.rs  polling.rs  queries.rs  scoring.rs
src-tauri/src/github/graphql/: dashboard.graphql  pull_request_detail.graphql  schema.graphql  user_repos.graphql
src-tauri/src/workspace/: claude.rs  lifecycle.rs  mod.rs  pty.rs  worktree.rs
src/components/ActivityFeed/: ActivityFeed.test.tsx  ActivityFeed.tsx  ActivityItem.test.tsx  ActivityItem.tsx  index.tsx
src/components/AuthSetup/: AuthSetup.test.tsx  AuthSetup.tsx  index.ts
src/components/CommandPalette/: CommandPalette.test.tsx  CommandPalette.tsx
src/components/ErrorBoundary/: ErrorBoundary.test.tsx  ErrorBoundary.tsx
src/components/Issues/: IssueCard.test.tsx  IssueCard.tsx  Issues.memo.test.tsx  Issues.test.tsx  Issues.tsx  index.ts  index.tsx
src/components/MyPRs/: MyPRs.memo.test.tsx  MyPRs.test.tsx  MyPRs.tsx  MyPrCard.test.tsx  MyPrCard.tsx  index.ts  index.tsx
src/components/Notifications/: NotificationCard.test.tsx  NotificationCard.tsx  Notifications.test.tsx  Notifications.tsx
src/components/Overview/: Overview.test.tsx  Overview.tsx
src/components/ReviewQueue/: ReviewCard.test.tsx  ReviewCard.tsx  ReviewQueue.memo.test.tsx  ReviewQueue.test.tsx  ReviewQueue.tsx  index.ts  index.tsx
src/components/Settings/: DebugInfo.test.tsx  DebugInfo.tsx  GitHubSettings.tsx  KeyboardShortcuts.test.tsx  KeyboardShortcuts.tsx  NumberField.tsx  RepositorySettings.tsx  Settings.test.tsx  Settings.tsx  Stats.tsx  WorkspaceSettings.tsx  index.tsx  styles.ts  useConfigMutation.ts
src/components/Sidebar/: NavItem.test.tsx  (+8 more)
src/hooks/: useDebounce.test.ts  useFilterableList.test.ts  useFilterableList.ts  useGitHubData.test.ts  useGitHubData.ts  useKeyboard.test.ts  useKeyboard.ts  useNotifications.test.ts  useNotifications.ts  useRegisterNavigableItems.ts  useWorkspace.test.ts  useWorkspace.ts  useWorkspaceEnriched.ts
src/lib/: a11y.test.ts  a11y.ts  icons.test.ts  icons.ts  lint-config.test.ts  open.ts  tauri.test.ts  tauri.ts  timeAgo.ts  types.test.ts  types.ts  uiClasses.ts
src/stores/: dashboard.test.ts  dashboard.ts  settings.test.ts  settings.ts  workspaces.test.ts  workspaces.ts
src/test/: setup.ts
(+43 files in other folders)
