[package]
name = "prism"
version = "0.1.0"
description = "GitHub Review Dashboard & PR Workspaces"
authors = ["Mathieu Piton"]
license = "MIT"
repository = "https://github.com/mpiton/prism"
edition = "2024"
rust-version = "1.94"

[lib]
name = "prism_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3" }
tauri-plugin-log = "2"
thiserror = "2.0.18"
sqlx = { version = "0.8.6", features = ["runtime-tokio"] }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
# Tauri commands often have many params; complex types are common in event-driven apps
too_many_arguments = "allow"
type_complexity = "allow"
# Tauri generates code that triggers these
module_name_repetitions = "allow"
must_use_candidate = "allow"
# Entry point run() uses .expect() intentionally — fatal if Tauri fails to start
missing_panics_doc = "allow"

[profile.dev]
incremental = true
opt-level = 0

[profile.dev.package."*"]
opt-level = 2

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
